--- a/gclient/Cargo.toml
+++ b/gclient/Cargo.toml
@@ -26,6 +26,7 @@ env_logger = "0.10"
 hex-literal = "0.3"
 log = "0.4"
 demo-meta-io = { path = "../examples/binaries/new-meta/io" }
+demo-backend-error = { path = "../examples/binaries/backend-error" }
 
 [features]
 default = [ "gear" ]
