--- a/.github/workflows/vara-reset-network.yml
+++ b/.github/workflows/vara-reset-network.yml
@@ -35,5 +35,4 @@ jobs:
             ${{secrets.VARA_NODE_7}} name=vara-gear07 validator=yes loki=yes loki_url=${{secrets.LOKI_URL}}
             ${{secrets.VARA_NODE_8}} name=vara-gear08 validator=yes loki=yes loki_url=${{secrets.LOKI_URL}}
             ${{secrets.VARA_NODE_9}} name=vara-gear09 validator=yes loki=yes loki_url=${{secrets.LOKI_URL}}
-            ${{secrets.VARA_ARCHIVE}} name=vara-archive validator=yes loki=yes loki_url=${{secrets.LOKI_URL}}
-            ${{secrets.VARA_ARCHIVE_RPC}} name=vara-archive-rpc validator=yes loki=yes loki_url=${{secrets.LOKI_URL}}
+            ${{secrets.VARA_NODE_ARCHIVE_RPC}} name=vara-archive-rpc validator=yes loki=yes loki_url=${{secrets.LOKI_URL}}
