--- a/pallets/gear/proc-macro/Cargo.toml
+++ b/pallets/gear/proc-macro/Cargo.toml
@@ -17,7 +17,7 @@ proc-macro = true
 [dependencies]
 proc-macro2 = "1.0.39"
 quote = "1.0.18"
-syn = "1.0.108"
+syn = { version = "1.0.108", features = ["full"] }
 
 [dev-dependencies]
 
