--- a/.github/workflows/build-node-fuzzer.yaml
+++ b/.github/workflows/build-node-fuzzer.yaml
@@ -11,6 +11,7 @@ env:
 jobs:
 
   build-node-fuzzer:
+    if: github.ref == 'refs/heads/master'
     runs-on: ubuntu-latest
     permissions:
       contents: read
