--- a/.github/workflows/build-node-fuzzer.yaml
+++ b/.github/workflows/build-node-fuzzer.yaml
@@ -11,7 +11,7 @@ env:
 jobs:
 
   build-node-fuzzer:
-    if: ${{ github.ref == 'refs/heads/main' }}
+    if: ${{ github.ref == 'refs/heads/develop' }}
     runs-on: ubuntu-latest
     permissions:
       contents: read
